# medical_expense_deducation_calc

./: .gitignore  GEMINI.md  QWEN.md  README.md  image_resize.py  main.py  pyproject.toml  result_nanohana.json  result_takeda.json  要件定義書.md
.gemini/agents/: implementation_leak_checker.md
.gemini/commands/: srp-review.toml
.gemini/reviews/: srp-review-server_20260626.md  srp-review-structural_parser-20260629.md
.github/: copilot-instructions.md
.github/prompts/: srp-review.prompt.md
.github/reviews/: srp-review-llm_extractor-20260618-105528.md  srp-review-llm_extractor-260616.md  srp-review-main-260615.md  srp-review-structural_parser-20260618-131034.md
.qwen/: settings.json
app/: args.py  coord_search.py  db.py  db_migrations.py  error_logging.py  image_resize.py  input.py  llm_extractor.py  normalization.py  ocr_pipeline.py  output.py  processor.py  prompts.py  structural_parser.py  template_feedback.py  watcher.py
app/services/: receipt_service.py
app/web/: server.py
docs/: DEVELOPMENT.md  schema.sql
docs/architecture/: 2026-06-12-architecture.md  2026-06-18-01-architecture.md  2026-06-18-02-architecture.md  (+5 more)
scripts/: copilot_update_arch.sh
tasks/: 01-refactor-entrypoint.md  02-ocr-batch-watcher.md  03-output-management.md  04-tests-and-ci.md  05-docs.md  README.md  ocr_pipeline_and_db_init_fixes.md
tests/: conftest.py  test_coord_search.py  test_db.py  test_e2e_structured_outputs.py  test_feedback.py  test_image_resize.py  test_llm_wrapper.py  test_normalization.py  test_structural_parser.py  test_watcher_integration.py  test_web.py
(+50 files in other folders)
