[project]
name = "medical-exp-deducation-calc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "paddleocr[doc-parser]>=3.6.0",
    "paddlepaddle>=3.3.1",
    "pytest>=9.0.3",
    "watchdog>=6.0.0",
]
[tool.black]
line-length = 112
