[project]
name = "medical-exp-deducation-calc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "paddleocr[doc-parser]>=3.6.0",
    "paddlepaddle>=3.3.1",
    "pytest>=9.0.3",
    "watchdog>=6.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.32",
    "httpx2>=2.4.0",
]
[tool.black]
line-length = 119
